tests/compile_fail/machine_module/attribute_with_args.rs
use moku::*;

#[state_machine]
mod blinky {
    use moku::*;

    #[machine_module()]
    mod state_machine_module {}
}

fn main() {}
