tests/compile_fail/machine_module/attribute_with_args.stderr
error: `moku::machine_module` accepts no arguments, try `#[moku::machine_module]`
 --> tests/compile_fail/machine_module/attribute_with_args.rs:7:5
  |
7 |     #[machine_module()]
  |     ^
